# spamassassin

./: .cvsignore  .gitignore  10_default_prefs.cf  10_misc.cf  20_advance_fee.cf  20_anti_ratware.cf  20_body_tests.cf  20_compensate.cf  20_dnsbl_tests.cf  20_drugs.cf  20_dynrdns.cf  20_fake_helo_tests.cf  20_freemail_domains.cf  20_head_tests.cf  20_html_tests.cf  20_imageinfo.cf  20_meta_tests.cf  20_net_tests.cf  20_phrases.cf  20_porn.cf  20_ratware.cf  20_uri_tests.cf  20_vbounce.cf  20text_es.cf  23_bayes.cf  25_accessdb.cf  25_antivirus.cf  25_asn.cf  25_body_tests_es.cf  25_body_tests_pl.cf  25_dcc.cf  25_dk.cf  25_dkim.cf  25_domainkeys.cf  25_hashcash.cf  25_head_tests_es.cf  25_head_tests_pl.cf  25_msexec.cf  25_pyzor.cf  25_razor2.cf  (+102 more)
.github/: README.md
3.0/: CREDITS  Changes  INSTALL  MANIFEST  MANIFEST.SKIP  sa-learn.raw  spamassassin.spec
3.1/: CREDITS  Changes  INSTALL  INSTALL.VMS  MANIFEST  MANIFEST.SKIP  README  STATUS  UPGRADE  USAGE  sa-learn.raw  sa-update.raw
3.3/: CREDITS  Changes  INSTALL  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  NOTICE  PACKAGING  README  UPGRADE  sa-learn.raw
contrib/: check_spamd  communigate.sh  kill-spamd.sh  mbox-to-check  run-corpora  run-masses  samailoffset  spamcheck.py  spamd.py  triplets.pl
debian/: .cvsignore  65_debian.cf  README.CVS  README.Exim3  README.Upgrade  build.pl  changelog  changelog.in  control  copyright  files  logcheck  rules  spamassassin.README.Debian  spamassassin.config  spamassassin.default  spamassassin.dirs  spamassassin.docs  spamassassin.examples  spamassassin.init  spamassassin.links  spamassassin.postinst  spamassassin.postrm  spamassassin.preinst  spamassassin.prerm  spamassassin.templates  spamc.README.Debian  spamc.docs  spamc.manpages  spamc.substvars  watch
filterproxy/: README-SMARTHOST.TXT  README.TXT  SmartHost.pm  filterproxy.pl
ldap/: README  README.testing
lib/: spamassassin-run.pod
lm/: LICENSE  README  ar.iso-8859-6.lm  be.windows-1251.lm  build.pl  el.iso-8859-7.lm  fr.lm  ga.lm  gd.lm  hy.lm  ja.shift-jis.lm  pt.lm  rm.lm  ru.koi8-r.lm  ru.windows-1251.lm  sk.windows-1250.lm  sq.lm  sv.lm  ta.lm  tr.unknown.lm
masses/: .cvsignore  CORPUS_POLICY  CORPUS_SUBMIT  CORPUS_SUBMIT_NIGHTLY  Makefile  README  README.perceptron  RUNME  RUNME.DOGMA  RUNME.SONIC  RUNME.TWOSTEP  bayes-thresholds  compare-models  config  config.set0  config.set1  config.set2  config.set3  continual_evolve.sh  corpus_submit.txt  cpucount  craig-evolve.c  craig-evolve.cxx  draw-bayes-histogram  enable-all-evolved-rules  evolve.cxx  extract-message-from-mbox  extract-results  find-extremes  force-publish-active-rules  fp-fn-statistics  fp-fn-to-tcr  freqdiff  garescorer.c  gen-score-freqs-gnuplot-table  generate-corpus  generate-translation  hit-frequencies  join-logs-from-net  kill_continual_evolve.sh  (+32 more)
powered_by/: LOGO_USAGE.TXT  powered by spamassassin.psd
qmail/: .cvsignore  README  README.qmail-spamc  qmail-scanner.patch  qmail-spamc.c
rule2xs/: re2xs  test.pl
rules/: 10_default_prefs.cf  10_hasbase.cf  10_misc.cf  10_plugins.cf  20_advance_fee.cf  20_anti_ratware.cf  20_aux_tlds.cf  20_body_tests.cf  20_compensate.cf  20_dnsbl_tests.cf  20_drugs.cf  20_dynrdns.cf  20_fake_helo_tests.cf  20_freemail.cf  20_freemail_domains.cf  20_freemail_mailcom_domains.cf  20_head_tests.cf  20_html_tests.cf  20_imageinfo.cf  20_mailspike.cf  20_meta_tests.cf  20_net_tests.cf  20_pdfinfo.cf  20_phrases.cf  20_porn.cf  20_ratware.cf  20_uri_tests.cf  20_vbounce.cf  20text_es.cf  23_bayes.cf  23_bayes_ignore_header.cf  23_osbf.cf  24_auto_meta.cf  25_accessdb.cf  25_antivirus.cf  25_asn.cf  25_body_tests_es.cf  25_body_tests_pl.cf  25_dcc.cf  25_dkim.cf  (+70 more)
rules-extras/: 10_uridnsbl_skip_financial.cf
rulescode/: 20_dnsbl_tests.cf  25_dcc.cf  25_razor2.cf  70_testing.cf
rulesrc/: 10_force_active.cf
spamc/: Makefile.in  Makefile.win  README.qmail  README.win  config.h.in  configure  configure.in  configure.pl  getopt.c  getopt.h  libspamc.c  libspamc.h  qmail-spamc.c  spamc.c  spamc.h.in  spamc.h.win  spamc.pod  utils.c  utils.h  version.h.in
spamc/replace/: getopt.c  getopt.h
spamd/: .cvsignore  Makefile  PROTOCOL  README  README.Win  README.spamd  README.vpopmail  binaries.mk.in  binaries.mk.win  config.h.win  debian-rc-script.sh  debian-rc-spamd.conf  libspamc.c  libspamc.h  netbsd-rc-script.sh  pld-rc-script.sh  redhat-rc-script.sh  slackware-rc-script.sh  solaris-rc-script.sh  spamassassin  spamc.c  spamc.pod  spamd  spamd.raw  suse-ancient-rc-script.sh  suse-rc-script.sh  utils.c  utils.h
spamd-apache2/: MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  README.apache
spamproxy/: .cvsignore  CHANGES.spamproxy  README  README.SmartHost  spamproxyd.raw
sql/: README  README.awl  README.bayes  README.txrep  awl_mysql.sql  awl_pg.sql  bayes_mysql.sql  bayes_pg.sql  bayes_sqlite.sql  decodeshorturl_mysql.sql  decodeshorturl_pg.sql  decodeshorturl_sqlite.sql  redirectors_mysql.sql  redirectors_pg.sql  redirectors_sqlite.sql  spamassassin.sql  txrep_mysql.sql  txrep_pg.sql  txrep_sqlite.sql  userpref_mysql.sql  userpref_pg.sql
t/: .cvsignore  README  SATest.pl  SATest.pm  all_modules.t  allowlist_to.t  arc.t  askdns.t  authres.t  autolearn.t  autolearn_force.t  autolearn_force_fail.t  basic_lint.t  basic_lint_net.t  basic_lint_without_plugins.t  basic_lint_without_sandbox.t  basic_meta.t  basic_meta2.t  basic_meta_net.t  basic_obj_api.t  bayesbdb.t  bayesdbm.t  bayesdbm_flock.t  bayessdbm.t  bayessdbm_seen_delete.t  bayessql.t  blacklist_autolearn.t  blocklist_autolearn.t  body_mod.t  body_str.t  check_implemented.t  cidrs.t  config.dist  config_errs.t  config_text.t  config_tree_recurse.t  cpp_comments_in_spamc.t  cross_user_config_leak.t  date.t  db_awl_path.t  (+218 more)
t.rules/: run
testmails/: get_stats  reorder_by_hits  stats
textcat/: README  languages_to_lm.pl  lm_to_languages.pl  lm_to_utf8.pl
tools/: bayes_dump_to_trusted_networks  check_bayes_db  check_whitelist  convert_awl_dbm_to_sql  convert_bayes_dbm_to_sql  dallas-sa-stats.pl  desc_length.pl  mboxsplit  sa-stats.pl  speedtest  (+6 more)
(+2499 files in other folders)
